// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header>
  <div
    className="container navbar"
  >
    <SvgrURL
      className="chilidog"
    />
    <div
      className="home-nav-button home-item"
    >
      <a
        className="a home-nav-button home-item"
        href="/"
      >
        Superformula.
      </a>
    </div>
    <nav
      className="nav-item container"
    >
      <div
        className="nav-button page-item nav-item"
      >
        <a
          className="a nav-button page-item nav-item"
          href="/services"
        >
          Services
        </a>
      </div>
      <div
        className="nav-button page-item nav-item"
      >
        <a
          className="a nav-button page-item nav-item"
          href="/work"
        >
          Work
        </a>
      </div>
      <div
        className="nav-button page-item nav-item"
      >
        <a
          className="a nav-button page-item nav-item"
          href="/articles"
        >
          Articles
        </a>
      </div>
      <div
        className="nav-button page-item nav-item"
      >
        <a
          className="a nav-button page-item nav-item"
          href="/contact"
        >
          Contact
        </a>
      </div>
      <div
        className="careers-nav-button page-item nav-item"
      >
        <a
          className="a careers-nav-button page-item nav-item"
          href="https://careers.superformula.com"
        >
          Careers
        </a>
      </div>
    </nav>
  </div>
</header>
`;

exports[`HomeNavButton renders correctly 1`] = `
<div
  className="home-nav-button undefined"
>
  <a
    className="a home-nav-button undefined"
    href="test"
  >
    test url
  </a>
</div>
`;

exports[`NavBar renders correctly 1`] = `
<div
  className="container navbar"
>
  <SvgrURL
    className="chilidog"
  />
  <div
    className="home-nav-button home-item"
  >
    <a
      className="a home-nav-button home-item"
      href="/"
    >
      Superformula.
    </a>
  </div>
  <nav
    className="nav-item container"
  >
    <div
      className="nav-button page-item nav-item"
    >
      <a
        className="a nav-button page-item nav-item"
        href="/services"
      >
        Services
      </a>
    </div>
    <div
      className="nav-button page-item nav-item"
    >
      <a
        className="a nav-button page-item nav-item"
        href="/work"
      >
        Work
      </a>
    </div>
    <div
      className="nav-button page-item nav-item"
    >
      <a
        className="a nav-button page-item nav-item"
        href="/articles"
      >
        Articles
      </a>
    </div>
    <div
      className="nav-button page-item nav-item"
    >
      <a
        className="a nav-button page-item nav-item"
        href="/contact"
      >
        Contact
      </a>
    </div>
    <div
      className="careers-nav-button page-item nav-item"
    >
      <a
        className="a careers-nav-button page-item nav-item"
        href="https://careers.superformula.com"
      >
        Careers
      </a>
    </div>
  </nav>
</div>
`;
